Sabir gider activity si eklendi. xml tasarımı yapıldı. toplam gider hesabı yapıldı. toplam gider ana sayfaya intent ile gönderildi.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Gunluk Harcamam</string>
+    <string name="buttonEkle">Ekle</string>
+    <string name="buttonVazgec">Vazgeç</string>
+    <string name="buttonHesapla">Hesapla</string>
+    <string name="buttonSabitGider">Sabit Gider Ekle</string>
 </resources>
